<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_board_game_details"
            style="@style/section_titles"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/list_item_padding"
            android:layout_marginBottom="@dimen/list_item_padding">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:padding="@dimen/list_item_internal_padding"
                android:layout_marginRight="@dimen/list_item_internal_padding"
                android:layout_gravity="center_vertical"
                android:scaleType="center"
                android:src="@drawable/no_image"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/list_item_internal_padding">

                <EditText
                    android:id="@+id/detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/list_item_placeholder_name"
                    style="@style/board_game_name"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/attributes_text_view_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/list_item_year"/>

                    <EditText
                        android:id="@+id/detail_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/year_hint"
                        android:inputType="number"
                        style="@style/edit_text_style"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/attributes_text_view_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/list_item_players"/>

                    <EditText
                        android:id="@+id/detail_players"
                        style="@style/edit_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/players_hint"
                        android:inputType="text"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_other_details"
            style="@style/section_titles"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/list_item_padding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_item_price"
                    style="@style/attributes_text_view_style"/>

                <EditText
                    android:id="@+id/detail_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/price_hint"
                    style="@style/edit_text_style"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euro_sign"
                    style="@style/attributes_text_view_style"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_item_quantity"
                    style="@style/attributes_text_view_style"/>

                <EditText
                    android:id="@+id/detail_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/quantity_hint"
                    style="@style/edit_text_style"/>
            </LinearLayout>

            </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_title_tools"
            style="@style/section_titles"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/list_item_padding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/list_item_internal_padding"
                    android:text="@string/change_quantity_by"
                    style="@style/attributes_text_view_style"/>

                <Button
                    android:id="@+id/detail_button_decrease"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:text="@string/minus"
                    style="@style/buttons"/>

                <EditText
                    android:id="@+id/detail_quantity_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="1"
                    android:hint="@string/change_quantity_hint"
                    style="@style/edit_text_style"/>

                <Button
                    android:id="@+id/detail_button_increase"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:text="@string/plus"
                    style="@style/buttons"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_item_supplier"
                    android:layout_gravity="center_vertical"
                    style="@style/attributes_text_view_style"/>

                <Spinner
                    android:id="@+id/detail_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"></Spinner>

                <Button
                    android:id="@+id/detail_button_place_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/place_order"
                    style="@style/buttons"/>
            </LinearLayout>
        </LinearLayout>

        </LinearLayout>
</ScrollView>
